added questions and answers

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-
 </head>
 <body>
-    
+    <header>
+        <h1>Assignment 7</h1>
+    </header>
+    <main>
+        <h2>Q: What worked well over the last eight weeks and aided your learning process?</h2>
+        <p>A: The videos really worked well for me, it helped me learn more about the topic that we were currently on that week.</p>
+
+        <h2>Q: What would you change about the course?</h2>
+        <p>A: I don't think I would change anything about the course, I think everything was great.</p>
+
+        <h2>Q: Did you learn what you expected to learn in this course? </h2>
+        <p>A: Yes, what I expected to learn was more about CSS and of course that'a what I got to  learned</p>
+
+        <h2>Q: What concepts were new to you, and what concepts have you already encountered in the past?</h2>
+        <p>A: The concepts that were new to me were colors, typography, CSS grids and Bootstrap. I knew a little bit about display and positioning from my previous course's final project.</p>
+    </main>
 </body>
 </html>
